# tab-cultist

./: Cargo.toml  LICENSE  README.md  config.txt  install.sh  logo.txt  release.sh
database/: Behemoth-Chant_for_Ezkaton_Nergal.json  Behemoth-Chant_for_Ezkaton_Seth.json  Darkthrone-Transylvanian_Hunger.json  Root-Pisen_pro_satana.json
linux/: dependencies.sh  install.sh  tab-cultist.desktop
src/: data.rs  graphics.rs  main.rs  settings.rs  texture.rs  tuning.rs
