[package]
name = "tab-cultist"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
winres = "0.1.12"

[dependencies.sdl2]
version =  "0.35.2"
features = ["image","ttf"]

